# PDF_manager

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
macos/: Info.plist.in  README.md  build.sh
src/: app_init.cpp  app_init.h  file_dialog.cpp  file_dialog.h  file_dialog_macos.mm  macos_window.h  macos_window.mm  main.cpp  pdf_library.cpp  pdf_library.h  pdf_viewer.cpp  pdf_viewer.h  setlist_gen.cpp  setlist_gen.h  transpose.py  ui_helpers.cpp  ui_helpers.h  ui_panels.cpp  ui_panels.h
src/assets/macos/: app_icon.icns
src/windows/: app_icon.rc
